--- a/package.json
+++ b/package.json
@@ -27,7 +27,9 @@
     "@capacitor/keyboard": "5.0.6",
     "@capacitor/status-bar": "5.0.6",
     "@ionic/angular": "^7.6.0",
+    "@lottiefiles/lottie-player": "^2.0.2",
     "ionicons": "^7.2.1",
+    "ng-lottie": "^0.3.2",
     "rxjs": "~7.8.0",
     "tslib": "^2.3.0",
     "zone.js": "~0.14.2"
